--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.0.1",
+    "helmet": "^8.1.0",
     "luxon": "^3.6.1",
     "mongoose": "^8.16.1",
     "mongoose-paginate-v2": "^1.9.1",
